--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -1,37 +1,33 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="{% static 'css/base.css' %}">
-    <title>
-        {% block title %}
-        Home page
-        {% endblock title %}
-    </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="text/css" rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <title>{% block title %} Home page {% endblock title %}</title>
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <a href="{% url 'home_page' %}">bulkashmak</a>
-        </div>
-        <nav>
-            <ul class="nav_links">
-                <li><a href="{% url 'posts_page' %}">posts</a></li>
-                <li><a href="{% url 'about_page' %}">about</a></li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <a href="{% url 'home_page' %}">bulkashmak</a>
+      </div>
+      <nav>
+        <ul class="nav_links">
+          <li><a href="{% url 'posts_page' %}">posts</a></li>
+          <li><a href="{% url 'about_page' %}">about</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="semi-header">
-        <p>{{ title }}</p>
+      <p>{{ title }}</p>
     </div>
-    <div class="content">
-        {% block content %}
-        {% endblock content %}
+    <div class="wrapper">
+      <div class="content">{% block content %} {% endblock content %}</div>
+      <div class="sidebar">{% block sidebar %} {% endblock sidebar %}</div>
     </div>
     <footer>
-        <p>© Bulkashmak</p>
+      <p>© Bulkashmak</p>
     </footer>
-</body>
+  </body>
 </html>
