--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
-
-{% block title %}
-{{ title }}
-{% endblock title %}
-
+{% block title %} {{ title }} {% endblock title %}
 {% block content %}
-    {% for post in posts %}
-        {% if post.status == 1 %}
-            <div class="post">
-                <h5>{{ post.title }}</h5>
-                <p>{{ post.content }}</p>
-                <p class="author">Posted: {{ post.created }} by <a href="#">{{ post.author }}</a></p>
-            </div>
-        {% endif %}
-    {% endfor %}
+  {% for post in posts %}
+    {% if post.status == 1 %}
+      <div class="post">
+        <h5>{{ post.title }}</h5>
+        <p>{{ post.content }}</p>
+        <p class="author">Posted: {{ post.created }} by <a href="#">{{ post.author }}</a>
+        </p>
+      </div>
+    {% endif %}
+  {% endfor %}
 {% endblock content %}
+{% block sidebar %}
+{% endblock sidebar %}
