--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="{% static 'css/base.css' %}" />
     <title>{% block title %} Home page {% endblock title %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/bulkashmak-logo.png' %}"/>
   </head>
   <body>
     <header>
