--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -40,8 +40,7 @@ header {
   font-weight: 700;
 }
 
-.nav_links li,
-a {
+.nav_links li a {
   font-size: 13px;
   color: white;
   justify-content: end;
@@ -71,10 +70,10 @@ a {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  bottom: 0px;
   width: 100%;
-  height: 50px;
+  height: 100px;
 
   background-color: #201233;
 }
@@ -100,6 +99,7 @@ body {
 .wrapper {
   display: grid;
   grid-template-columns: 3fr 1fr;
+  grid-gap: 5px;
 }
 
 .content {
@@ -138,6 +138,7 @@ body {
 }
 
 .contacts li a {
+  text-decoration: none;
   color: #6e0aad;
   font-size: 15px;
 }
