--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -91,7 +91,8 @@ footer p {
 }
 
 body {
-  background-color: white;
+  color: white;
+  background-color: black;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
 }
@@ -114,7 +115,7 @@ body {
 
 .sidebar {
   grid-column: 2;
-  background-color: lightgray;
+  background-color: rgb(50, 50, 50);
 }
 
 .about_page {
@@ -148,13 +149,14 @@ body {
 }
 
 .post {
+  background-color: rgb(51, 51, 51);
   min-height: auto;
   max-height: 300px;
   display: grid;
   grid-template-rows: 30px auto 40px;
   grid-gap: 5px;
   border: solid 2px #754096;
-  border-radius: 10px;
+  border-radius: 8px;
   padding: 5px 5px;
 }
 
@@ -167,17 +169,18 @@ body {
   font-size: 18px;
 }
 
-.author {
+.post > .author {
   padding-top: 18px;
-  color: black;
-  font-size: 20px;
+  color: darkgray;
+  font-size: 15px;
 }
 
 .author a {
-  color: #6e0aad;
+  color: #c59bdf;
   font-style: italic;
-  font-size: 20px;
+  font-size: 15px;
   text-transform: capitalize;
+  text-decoration: none;
 }
 
 .author a:hover {
