--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -18,6 +18,13 @@
           <li><a href="{% url 'posts_page' %}">posts</a></li>
           <li><a href="{% url 'about_page' %}">about</a></li>
         </ul>
+        <div class="log-inout">
+          {% if user.is_authenticated %}
+            <a href="#">Log-out</a>
+          {% else %}
+            <a href="{% url 'login' %}">Log-in</a>
+          {% endif %}
+        </div>
       </nav>
     </header>
     <div class="semi-header">
