--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -22,7 +22,7 @@
           {% if user.is_authenticated %}
             <a href="{% url 'account_details' %}">Account</a>
           {% else %}
-            <a href="{% url 'login' %}">Log-in</a>
+            <a href="{% url 'login' %}">Log In</a>
           {% endif %}
         </div>
       </nav>
