--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -14,6 +14,6 @@
 
         {{ form }}
 
-        <input type="submit" value="register" />
+        <input class="log-button" type="submit" value="register" />
     </form>
 {% endblock content %}
