--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,6 +4,10 @@
 Login
 {% endblock title %}
 
+{% block semi_header %}
+Login
+{% endblock semi_header %}
+
 {% block content %}
     {% if form.errors %}
         <p>
