--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -60,17 +60,11 @@ nav {
 
 .log-inout {
   background-color: #b9b9b9;
-  padding: 4px;
+  padding: 4px 5px;
   border: solid 2px white;
   border-radius: 5px;
   transition: all 0.3s ease 0s;
-}
 
-.log-inout:hover {
-  background-color: white;
-}
-
-.log-inout > a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -78,6 +72,11 @@ nav {
   justify-content: center;
   text-decoration: none;
   color: black;
+}
+
+.log-inout:hover {
+  background-color: white;
+  cursor: pointer;
 }
 
 .semi-header {
