Created a form and a page for new posts creation. Added a 'Create post' button on the sidebar of posts page.

--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -13,4 +13,9 @@
   {% endfor %}
 {% endblock content %}
 {% block sidebar %}
+<div id="posts_sidebar">
+  <a href={% url 'create_post_page' %}>
+    <button class="create_button">Create a post</button>
+  </a>
+</div>
 {% endblock sidebar %}
