--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -139,9 +139,16 @@ body {
   padding-bottom: 50px;
 }
 
-.sidebar {
+aside {
   grid-column: 2;
   background-color: #dfdfdf;
+}
+
+.sidebar {
+  padding-top: 20px;
+  padding-left: 5%;
+  padding-right: 13.4%;
+  padding-bottom: 50px;
 }
 
 .about_page {
@@ -214,7 +221,6 @@ body {
 }
 
 .log-button {
-  /* width: 80px; */
   background-color: #dfdfdf;
   border: solid 2px black;
   border-radius: 5px;
@@ -250,4 +256,22 @@ input[type=text], input[type=password] {
 
 input[type=text]:focus, input[type=password]:focus {
   width: 150px;
+}
+
+.create_button {
+  background-color: white;
+  border: solid 2px black;
+  border-radius: 5px;
+  color: black;
+  padding: 4px 5px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  transition: all 0.3s ease 0s;
+}
+
+.create_button:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
