--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -36,7 +36,9 @@
     </div>
     <div class="wrapper">
       <div class="content">{% block content %} {% endblock content %}</div>
-      <div class="sidebar">{% block sidebar %} {% endblock sidebar %}</div>
+      <aside>
+        <div class="sidebar">{% block sidebar %} {% endblock sidebar %}</div>
+      </aside>
     </div>
     <footer>
       <p>© Bulkashmak</p>
