--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -7,7 +7,9 @@
 {% block content %}
 <div class="account">
     <h3>Hello, {{ user.username }}.</h3>
-    <br>
-    <a href="{% url 'logout' %}"><button class="log-button" type="button">Log Out</button></a>
 </div>
 {% endblock content %}
+
+{% block sidebar %}
+    <a href="{% url 'logout' %}"><button class="create_button" type="button">Log Out</button></a>
+{% endblock sidebar %}
