Edited registration and account pages. Now user can see his posts on account page.

--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -9,10 +9,10 @@
         {% csrf_token %}
 
         {% if form.errors %}
-            <p>The input is incorrect</p>
+            <p>The input is incorrect</p><hr><br>
         {% endif %}
 
-        {{ form }}
+        {{ form.as_p }}
 
         <input class="log-button" type="submit" value="register" />
     </form>
