--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -6,7 +6,8 @@
       <div class="post">
         <h5>{{ post.title }}</h5>
         <p>{{ post.content }}</p>
-        <p class="author">Posted: {{ post.created }} | | by <a href="#">{{ post.author }}</a>
+        <p class="author">
+          Posted: {{ post.created }} | | by <a href="#">{{ post.author }}</a>
         </p>
       </div>
     {% endif %}
