--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -5,9 +5,25 @@
 {% endblock title %}
 
 {% block content %}
-<div class="account">
-    <h3>Hello, {{ user.username }}.</h3>
-</div>
+    <div class="account">
+        <h3>Hello, {{ user.username }}</h3>
+        <hr><br>
+        <div>
+            <h2>Your Posts</h2><br>
+            {% for post in posts %}
+                <div class="post">
+                    <h5>{{ post.title }}</h5>
+                    <p>{{ post.content }}</p>
+                    <p class="author">
+                        Posted: {{ post.created }} | | 
+                            {% if post.status == 1 %} Published
+                            {% else %} Draft
+                            {% endif %}
+                    </p>
+                </div><br>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock content %}
 
 {% block sidebar %}
