--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -12,7 +12,9 @@
             <h2>Your Posts</h2><br>
             {% for post in posts %}
                 <div class="post">
-                    <h5>{{ post.title }}</h5>
+                    <h5>
+                        {{ post.title }} 
+                    </h5>
                     <p>{{ post.content }}</p>
                     <p class="author">
                         Posted: {{ post.created }} | | 
@@ -20,6 +22,9 @@
                             {% else %} Draft
                             {% endif %}
                     </p>
+                    <a href="{% url 'delete_post' post.id %}">
+                        <button class="delete-btn" type="button">delete</button>
+                    </a>
                 </div><br>
             {% endfor %}
         </div>
