--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -4,7 +4,7 @@
   {% for post in posts %}
     {% if post.status == 1 %}
       <div class="post">
-        <h5>{{ post.title }}</h5>
+        <h5 class="post_title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h5>
         <p>{{ post.content }}</p>
         <p class="author">
           Posted: {{ post.created }} | | by <a href="#">{{ post.author }}</a>
