--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -12,8 +12,8 @@
             <h2>Your Posts</h2><br>
             {% for post in posts %}
                 <div class="post">
-                    <h5>
-                        {{ post.title }} 
+                    <h5 class="post_title">
+                        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
                     </h5>
                     <p>{{ post.content }}</p>
                     <p class="author">
