--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -307,3 +307,22 @@ input[type=text]:focus, input[type=password]:focus {
   color: white;
   cursor: pointer;
 }
+
+.sidebar_btn {
+  background-color: white;
+  border: solid 2px black;
+  border-radius: 5px;
+  color: black;
+  padding: 4px 5px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  transition: all 0.3s ease 0s;
+  margin-bottom: 5px;
+}
+
+.sidebar_btn:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
