In process of implementing a search function on posts page.

--- a/posts/static/css/base.css
+++ b/posts/static/css/base.css
@@ -326,3 +326,11 @@ input[type=text]:focus, input[type=password]:focus {
   color: white;
   cursor: pointer;
 }
+
+#search_bar {
+  width: 20%;
+}
+
+#search_bar:focus {
+  width: 50%;
+}
