--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -1,11 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
-  <div class="search_form">
-    <form method="get">
-      <input id="search_bar" type="text" name="q" id="id_q" placeholder="Search...">
-    <form>
-  </div>
   {% for post in posts %}
     {% if post.status == 1 %}
       <div class="post">
@@ -19,13 +14,17 @@
   {% endfor %}
 {% endblock content %}
 {% block sidebar %}
-<div id="posts_sidebar">
-  <a href={% url 'create_post_page' %}>
-    <button class="create_button">Create a post</button>
-  </a>
-</div>
+  <div id="posts_sidebar">
+    <a href={% url 'create_post_page' %}>
+      <button class="create_button">Create a post</button>
+    </a>
+  </div>
+  <br>
+  <h3>Use this form to search for a specific Post:</h3>
+  <div class="search_form">
+    <form method="get">
+      {{ myFilter.form.as_p }}
+      <button type="submit">Search</button>
+    <form>
+  </div>
 {% endblock sidebar %}
-
-<script type="text/javascript">
-  document.getElementById("id_q").value = "{{ query }}"
-</script>
