--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -20,11 +20,13 @@
     </a>
   </div>
   <br>
+  <hr>
+  <br>
   <h3>Use this form to search for a specific Post:</h3>
   <div class="search_form">
     <form method="get">
       {{ myFilter.form.as_p }}
-      <button type="submit">Search</button>
+      <button class="create_button" type="submit">Search</button>
     <form>
   </div>
 {% endblock sidebar %}
